[gd_scene load_steps=4 format=2]

[ext_resource path="res://rooms/jewelcraft.gd" type="Script" id=1]
[ext_resource path="res://tiles/main_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://button_tradeskillInProgress.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D" groups=[
"ClearOnRestore",
"Persist",
]]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 65535, 21, 0, 0, 21, 0, 1, 24, 0, 2, 3, 0, 3, 23, 0, 4, 14, 0, 14, 13, 0, 15, 21, 0, 16, 21, 0, 131071, 21, 0, 65536, 11, 0, 65537, 28, 0, 65538, 3, 0, 65539, 22, 0, 65550, 12, 0, 65551, 27, 0, 65552, 21, 0, 196607, 21, 0, 131072, 27, 0, 131073, 28, 0, 131074, 3, 0, 131075, 23, 0, 131086, 13, 0, 131087, 24, 0, 131088, 27, 0, 262143, 21, 0, 196608, 21, 0, 196609, 25, 0, 196610, 3, 0, 196611, 22, 0, 196622, 12, 0, 196623, 27, 0, 196624, 21, 0, 327679, 21, 0, 262144, 26, 0, 262145, 28, 0, 262146, 3, 0, 262147, 22, 0, 262158, 13, 0, 262159, 21, 0, 262160, 26, 0, 393215, 21, 0, 327680, 27, 0, 327681, 28, 0, 327682, 3, 0, 327683, 23, 0, 327694, 12, 0, 327695, 21, 0, 327696, 21, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="field_roomName" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 169.0
margin_top = 7.0
margin_right = 256.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Jewelcraft"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_staffCraft" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 190.0
margin_top = 140.0
margin_right = 254.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Staff"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="button_inProgress" parent="." index="3" instance=ExtResource( 3 )]

margin_left = 403.0
margin_top = 9.0
margin_right = 467.0
margin_bottom = 73.0

[connection signal="pressed" from="button_staffCraft" to="." method="_on_button_staffCraft_pressed"]

[connection signal="pressed" from="button_inProgress" to="." method="_on_button_inProgress_pressed"]


